--- a/robusta-gogo-commands/pom.xml
+++ b/robusta-gogo-commands/pom.xml
@@ -5,6 +5,7 @@
     <groupId>fr.adele.robusta</groupId>
     <artifactId>robusta</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
