--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -8,7 +8,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.adele.robusta</groupId>
-  <artifactId>robusta</artifactId>
+  <artifactId>robusta-parent</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
