--- a/robusta-java-agent/pom.xml
+++ b/robusta-java-agent/pom.xml
@@ -3,13 +3,11 @@
 
   <parent>
     <groupId>fr.adele.robusta</groupId>
-    <artifactId>robusta</artifactId>
+    <artifactId>robusta-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
-
-  <groupId>fr.adele.robusta</groupId>
   <artifactId>robusta-java-agent</artifactId>
   <packaging>jar</packaging>
 
