--- a/robusta-java-agent/pom.xml
+++ b/robusta-java-agent/pom.xml
@@ -16,7 +16,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <agent.class>fr.adele.robusta.RobustaJavaAgent</agent.class>
+    <agent.class>fr.adele.robusta.agent.RobustaJavaAgent</agent.class>
   </properties>
 
   <build>
