Added class transformer to java agent in order to intercept class loading. It simply prints out information regarding which classes are loaded, the thread that performs the load and the classloader that is loading them.

--- a/robusta-java-agent/pom.xml
+++ b/robusta-java-agent/pom.xml
@@ -30,6 +30,7 @@
             <manifestEntries>
               <Premain-Class>${agent.class}</Premain-Class>
               <Can-Redefine-Classes>true</Can-Redefine-Classes>
+              <Can-Retransform-Classes>true</Can-Retransform-Classes>
               <Main-Class>NotSuitableAsMain</Main-Class>
             </manifestEntries>
           </archive>
