--- a/framework/chameleon-distribution-web-0.0.1-SNAPSHOT/chameleon.properties
+++ b/framework/chameleon-distribution-web-0.0.1-SNAPSHOT/chameleon.properties
@@ -35,7 +35,8 @@ org.apache.felix.http.whiteboardEnabled=true
 #org.osgi.framework.system.packages.extra=org.osgi.service.cm; version=1.3.0,org.osgi.service.log; version=1.3.0, org.slf4j; version=1.5.8,org.slf4j.impl; version=1.5.8,org.slf4j.helpers; version=1.5.8, fr.adele.robusta
 
 #Export agent from system bundle at startup
-org.osgi.framework.system.packages.extra=fr.adele.robusta.agent
+#org.osgi.framework.system.packages.extra=fr.adele.robusta.agent,fr.adele.robusta.annotations
 #ipojo.proxy=disabled
 #ipojo.proxy.type=dynamic-proxy
-
+org.osgi.framework.bootdelegation=fr.adele.robusta.annotations,fr.adele.robusta.agent
+org.osgi.framework.bundle.parent=app
